[package]
name = "edamame_backend"
version = "0.1.0"
edition = "2021"

[dependencies]

edamame_foundation = { features = [ "disable-helper" ], git = "https://github.com/edamametechnologies/edamame_foundation", branch = "dev" }

# AWS
lambda_http = "0.9.2"

# Hashing
blake3 = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]

# Environment variables (build time)
dotenv-build = "0.1"