[package]
name = "edamame_backend"
version = "0.1.0"
edition = "2021"

[dependencies]

edamame_foundation = { features = [ "disable-helper" ], path = "../edamame_foundation" }

# Error
anyhow = "1.0.79"

# AWS
lambda_http = "0.10.0"

# Hashing
blake3 = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]

# Environment variables (build time)
dotenv-build = "0.1"
