[package]
name = "edamame_backend"
version = "0.3.3"
edition = "2021"

[dependencies]

# Error
anyhow = "1.0.79"

# JSON
serde = { version = "1.0.195", features = ["derive"] }

# AWS
lambda_http = "0.12.0"

# Hashing
blake3 = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]

# Environment variables (build time)
dotenv-build = "0.1"
